# Iris

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  iris_config.json  karma_config.json  setup.json
modules/: KPackage.cmake
sample_config/: iris_config.json
src/: CMakeLists.txt
src/config/: CMakeLists.txt  Configuration.cpp  Configuration.h  Parser.cpp  Parser.h  Test.cpp
src/data/: Bus.cpp  Bus.h  CMakeLists.txt  Test.cpp  main.cpp
src/driver/: CMakeLists.txt  Driver.cpp  Driver.h  main.cpp
src/interface/: CMakeLists.txt  Iris.cpp  Iris.h  Karma.cpp  Karma.h
src/io/: CMakeLists.txt  ObjectLoader.cpp  ObjectLoader.h  Test.cpp
src/log/: CMakeLists.txt  Log.cpp  Log.h  Test.cpp
src/module/: CMakeLists.txt  Graph.cpp  Graph.h  Loader.cpp  Loader.h  Manager.cpp  Manager.h  Module.cpp  Module.h  Scheduler.cpp  Scheduler.h  Test.cpp  test_config.json  test_json.json
src/module/test_module/: CMakeLists.txt  TestModule.cpp  TestModule.h
src/node/: CMakeLists.txt  Graph.cpp  Graph.h  Loader.cpp  Loader.h  Manager.cpp  Manager.h  Module.cpp  Module.h
src/profiling/: CMakeLists.txt  Test.cpp  Timer.cpp  Timer.h
