SET( KARMA_LOG_SOURCES 
     Log.cpp
   )
      
SET( KARMA_LOG_HEADERS
     Log.h
   )

SET( KARMA_LOG_INCLUDES
   )

SET( KARMA_LOG_LIBRARIES
    )

ADD_LIBRARY( karma_log SHARED ${KARMA_LOG_SOURCES} ${KARMA_LOG_HEADERS} )

# If running tests, make and run them.
IF( RUN_TESTS )
  BUILD_TEST( TARGET karma_log )
ENDIF()

INSTALL( FILES   ${KARMA_LOG_HEADERS}  DESTINATION ${INCLUDE_DIR}/log )
INSTALL( TARGETS karma_log EXPORT karma_lib
                 RUNTIME  DESTINATION ${EXPORT_LIB_DIR}/log
                 LIBRARY  DESTINATION ${EXPORT_LIB_DIR}/log 
                 ARCHIVE  DESTINATION ${EXPORT_LIB_DIR}/log
                 INCLUDES DESTINATION ${EXPORT_INCLUDE_DIR} )
