SET( IRIS_LOG_SOURCES 
     Log.cpp
   )
      
SET( IRIS_LOG_HEADERS
     Log.h
   )

SET( IRIS_LOG_INCLUDES
   )

SET( IRIS_LOG_LIBRARIES
    )

ADD_LIBRARY( iris_log SHARED ${IRIS_LOG_SOURCES} ${IRIS_LOG_HEADERS} )

# If running tests, make and run them.
IF( RUN_TESTS )
  BUILD_TEST( TARGET iris_log )
ENDIF()

INSTALL( FILES   ${IRIS_LOG_HEADERS}  DESTINATION ${INCLUDE_DIR}/log )
INSTALL( TARGETS iris_log EXPORT Iris
                 RUNTIME  DESTINATION ${EXPORT_LIB_DIR}/log
                 LIBRARY  DESTINATION ${EXPORT_LIB_DIR}/log 
                 ARCHIVE  DESTINATION ${EXPORT_LIB_DIR}/log
                 INCLUDES DESTINATION ${EXPORT_INCLUDE_DIR} )
